feat: filter search and journeys by accessible stations
